# proc-macro-workshop

./: Cargo.toml  README.md  rustfmt.toml
builder/: Cargo.toml
builder/derive-builder/: Cargo.toml
builder/derive-builder/src/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  lib.rs
builder/src/: lib.rs
builder/tests/: 01-parse.rs  02-create-builder.rs  progress.rs
debug/: Cargo.toml
debug/bins/: README.md  debug_struct.rs  format_args.rs
debug/derive-debug/: Cargo.toml
debug/derive-debug/src/: 03-custom-format.rs  bound.rs  generics.rs  lib.rs
debug/src/: lib.rs
debug/tests/: progress.rs
examples/dump-syntax/: Cargo.toml
examples/dump-syntax/src/: main.rs
examples/heapsize/: README.md
examples/heapsize/example/: Cargo.toml
examples/heapsize/example/src/: main.rs
examples/heapsize/heapsize/src/: lib.rs
examples/heapsize/heapsize_derive/: Cargo.toml
examples/heapsize/heapsize_derive/src/: lib.rs
examples/lazy-static/: READMED.md
examples/lazy-static/example/: Cargo.toml
examples/lazy-static/example/src/: main.rs
examples/lazy-static/lazy-static/: Cargo.toml
examples/lazy-static/lazy-static/src/: lib.rs
examples/trace-var/: README.md
examples/trace-var/example/: Cargo.toml
examples/trace-var/trace-var/: Cargo.toml
examples/trace-var/trace-var/src/: lib.rs
