[package]
name = "dump-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

[dependencies.syn]
version = "1.0.101"
default-features = false
features = ["parsing", "full", "extra-traits"]